error is solved. some text added
Style is not responsive to monitor.

--- a/CSS/first.css
+++ b/CSS/first.css
@@ -41,6 +41,7 @@ li a:hover:not(.active) {
 .fbicon {
 	padding-left: 350px;
 	margin: 0;
+  float: right;
 }
 
 .fpparagraph {
